# antibot

./: Cargo.toml  LICENSE  README.md
config/: example.toml
src/: lib.rs  main.rs
src/config/: app_params.rs  config.rs  mod.rs
src/handlers/: js_challenge.rs  mod.rs  redirect.rs  verify.rs
src/templates/: js_challenge.html
