[package]
name = "antibot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
bytes = "1"
http-body-util = "0.1"
blake3 = "1"
cookie = "0.18"
urlencoding = "2.1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
once_cell = "1.19"
url = "2.5"
